Added Mobile Nav

--- a/index.html
+++ b/index.html
@@ -60,14 +60,19 @@
 
 
       <!-- Main -->
-      <section class="home-section">
+      <section class="home-section" id="cover-section">
           <video id="cover-video" autoplay muted loop controls >
             <source src="video/cover-video.mp4" type="video/mp4" align="center">
           </video>
-          <img id="cover-img" src="assets/images/cover.jpg" alt="bg">
+
+          <div id="cover-buttons">
+            <button class="button"><a href="about.html">ABOUT</a></button>
+            <button class="button"><a href="team.html">TEAM</a></button>
+            <button class="button"><a href="testimonials.html">TESTIMONIES</a></button>
+            <button class="button"><a href="contact.html">CONTACT</a></button>
+          </div>
       </section>
-    </div>
-    <div class="scroll-up"><a href="#totop"><i class="fa fa-angle-double-up"></i></a></div>
+      <div class="scroll-up"><a href="#totop"><i class="fa fa-angle-double-up"></i></a></div>
 
 
 
